<resources>
    <string name="app_name">MyChat</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Confirm Password</string>
    <string name="prompt_msg">Type a message</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_send">Send</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password too short or does not match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sample_message">Hello!</string>
    <string name="mychat_welcome">欢迎使用 MyChat</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">退出登陆</string>
    <string name="settings">设置</string>
    <string name="change_pic">修改头像</string>
    <string name="change_status">修改个人状态</string>
    <string name="default_username">UserName</string>
    <string name="default_status">你好...</string>
    <string name="status_title">更新个人状态</string>
    <string name="status_update_hint">点击后输入个人状态</string>
    <string name="status_update_button">更新状态</string>
    <string name="user_name_in_row">User Name</string>
    <string name="profile_send_message_button">发送信息</string>
    <string name="profile_user_name">User Name</string>
    <string name="profile_my_status">My Status</string>
    <string name="message_contents">Messages.....</string>
    <string name="name_of_users_in_chat">Name of User</string>
</resources>
